fix layout scrollbar

--- a/src/app/views/Marble/Marble.css
+++ b/src/app/views/Marble/Marble.css
@@ -1,6 +1,5 @@
 .container {
     display: flex;
-    overflow: scroll;
 }
 
 .sidebar {
