--- a/src/app/views/Marble/SourceList/SourceList.css
+++ b/src/app/views/Marble/SourceList/SourceList.css
@@ -4,7 +4,6 @@
     margin: 0 auto;
     padding: 0 20px 30px 40px;
     list-style: none;
-    overflow: scroll;
 }
 
 .item {
